# WebSplat

./: .gitignore  AI_ML.md  Autogen Agent List.md  Claude - Prompt Caching.md  Google Gemini models.md  ai_agents.py  ai_integration.py  ai_ml_client.py  app.py  autogen_agents.py  cline_task_nov-5-2024_4-47-14-pm.md  groundxrag.md  interface_idea.tsx  nvidia.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  test_env.py  websplat_core_product_description.md
.upm/: store.json
Rough roadmap/: personal_notes.md
Rough roadmap/WebSplat Roadmaps/: Google_cloud_roadmap.md.md  Initial_roadmap.md.md  Websplat_deployment_considerations.md.md  considerations_using_google_cloud_for_deployment.md.md  (+1 more)
backend/: __init__.py  ai_integration.py  ai_ml_client.py  autogen_agents.py  main.py  test_ai_endpoints.py  test_endpoints.py  test_vertex_ai_endpoint.py  verify_backend.py  vertex_ai_endpoint.py  workflow.mermaid  workspace_manager.py
claudeDev_docs/: claudeDevInstructions.md  currentTask.md  designDocumentSummary.md  devNotes.md  frontend_test_plan.md  googleCloudStoragePlan.md  mvp_workflow.md  projectStructure.md  quickNote.md  rapid_test_plan.md  wireframes.csv
frontend/: ARCHITECTURE.md  babel.config.js  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  postcss.config.js  requirements.txt  tailwind.config.ts
static/: script.js  style.css  styles.css
templates/: index.html
tests/: test_ai_agents.py  test_app.py  test_backend.py  test_frontend.py  test_integration.py
websplat-env/: pyvenv.cfg
(+97 files in other folders)
