[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websplat"
version = "0.1"
description = "WebSplat project"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
namespaces = false

[tool.setuptools.package-data]
"backend" = ["*.py"]
